--- a/config-service/src/main/resources/config/discovery-service.yml
+++ b/config-service/src/main/resources/config/discovery-service.yml
@@ -5,7 +5,7 @@ server:
 
 eureka:
   instance:
-    hostname: localhost
+    hostname: 192.168.100.29
   client:
     registerWithEureka: false
     fetchRegistry: false
