--- a/config-service/src/main/resources/config/proxy-service.yml
+++ b/config-service/src/main/resources/config/proxy-service.yml
@@ -1,12 +1,12 @@
 debug: true
 
 server:
-  port: 5004
+  port: 5003
 
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:5002/eureka/
+      defaultZone: http://192.168.100.29:5002/eureka/
 
 logging:
   pattern: 
