--- a/config-service/src/main/resources/config/user-service.yml
+++ b/config-service/src/main/resources/config/user-service.yml
@@ -6,7 +6,7 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:5002/eureka/
+      defaultZone: http://192.168.100.29:5002/eureka/
 
 logging:
   pattern: 
