--- a/docker/dev/docker-compose-service.yml
+++ b/docker/dev/docker-compose-service.yml
@@ -18,11 +18,11 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.001'
-          memory: 50M
+          cpus: '0.25'
+          memory: 512M
         reservations:
-          cpus: '0.001'
-          memory: 50M
+          cpus: '0.25'
+          memory: 512M
     logging:
       options:
         max-size: "10m"
@@ -43,11 +43,11 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.001'
-          memory: 50M
+          cpus: '0.25'
+          memory: 512M
         reservations:
-          cpus: '0.001'
-          memory: 50M
+          cpus: '0.25'
+          memory: 512M
     logging:
       options:
         max-size: "10m"
@@ -67,6 +67,14 @@ services:
       - "5004"    
     volumes:
       - ./../data/gateway-service/:/var/lib/app
+    deploy:
+      resources:
+        limits:
+          cpus: '0.25'
+          memory: 512M
+        reservations:
+          cpus: '0.25'
+          memory: 512M
     logging:
       options:
         max-size: "10m"
@@ -87,6 +95,14 @@ services:
       - "5005"    
     volumes:
       - ./../data/user-service/:/var/lib/app
+    deploy:
+      resources:
+        limits:
+          cpus: '0.25'
+          memory: 512M
+        reservations:
+          cpus: '0.25'
+          memory: 512M
     logging:
       options:
         max-size: "10m"
@@ -106,6 +122,14 @@ services:
       - '80:80'
     expose:
       - "80"
+    deploy:
+      resources:
+        limits:
+          cpus: '0.25'
+          memory: 512M
+        reservations:
+          cpus: '0.25'
+          memory: 512M
     logging:
       options:
         max-size: "10m"
