--- a/alert-service/src/main/resources/bootstrap.yml
+++ b/alert-service/src/main/resources/bootstrap.yml
@@ -2,20 +2,5 @@ spring:
   application:
     name: alert-service
   cloud:
-    consul:
-      enabled: true
-      port: 8500
-      host: 192.168.100.29
-      config:
-        format: YAML
-      discovery:
-        instance-id: ${spring.application.name}:${random.value}
-        health-check-critical-timeout: 1m
-        register-health-check: true
-        prefer-ip-address: true
-
-    loadbalancer:
-      ribbon:
-        enabled: false
-
-server.port: 5002
+    config:
+      uri: http://192.168.100.29:5001
