--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>proxy-service</module>
         <module>gateway-service</module>        
         <module>user-service</module>
+        <module>alert-service</module>
     </modules>
 
     <dependencyManagement>
