--- a/config-service/pom.xml
+++ b/config-service/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   	<modelVersion>4.0.0</modelVersion>
 
-  	<groupId>slick.mali</groupId>
+  	<groupId>slick.mali.configservice</groupId>
 	<artifactId>config-service</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
@@ -10,7 +10,7 @@
 
 	<parent>
 		<groupId>slick.mali</groupId>
-		<artifactId>core-service</artifactId>
+		<artifactId>build-service</artifactId>
 		<version>1.0</version>
     </parent>
 
