--- a/docker/dev/docker-compose-service.yml
+++ b/docker/dev/docker-compose-service.yml
@@ -113,6 +113,35 @@ services:
       - gateway-service
     restart: "on-failure"
 
+  alert-service:
+    container_name: alert-service
+    image: mucunga90/alert-service:latest
+    networks:
+      - prod-network    
+    ports:
+      - '5006:5006'
+    expose:
+      - "5006"    
+    volumes:
+      - ./../data/alert-service/:/var/lib/app
+    deploy:
+      resources:
+        limits:
+          cpus: '0.25'
+          memory: 512M
+        reservations:
+          cpus: '0.25'
+          memory: 512M
+    logging:
+      options:
+        max-size: "10m"
+        max-file: "10"
+    depends_on:
+      - discovery-service
+      - proxy-service
+      - gateway-service
+    restart: "on-failure"
+
   web-service:
     container_name: web-service
     image: mucunga90/web-service:latest
@@ -139,4 +168,5 @@ services:
       - proxy-service
       - gateway-service
       - user-service
+      - alert-service
     restart: "on-failure"
