--- a/gateway-service/pom.xml
+++ b/gateway-service/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	
-	<groupId>slick.mali</groupId>
+	<groupId>slick.mali.gatewayservice</groupId>
 	<artifactId>gateway-service</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
@@ -11,7 +11,7 @@
 
 	<parent>
 		<groupId>slick.mali</groupId>
-		<artifactId>core-service</artifactId>
+		<artifactId>build-service</artifactId>
 		<version>1.0</version>
     </parent>
 
