--- a/config-service/src/main/resources/config/user-service.yml
+++ b/config-service/src/main/resources/config/user-service.yml
@@ -4,7 +4,12 @@ server:
   port: 5005
 
 eureka:
+  instance:
+    leaseRenewalIntervalInSeconds: 1
+    lease-expiration-duration-in-seconds: 2
   client:
+    fetchRegistry: true
+    registryFetchIntervalSeconds: 5
     serviceUrl:
       defaultZone: http://192.168.100.29:5002/eureka/
 
