--- a/config-service/src/main/resources/config/alert-service.yml
+++ b/config-service/src/main/resources/config/alert-service.yml
@@ -4,7 +4,12 @@ server:
   port: 5006
 
 eureka:
+  instance:
+    leaseRenewalIntervalInSeconds: 1
+    lease-expiration-duration-in-seconds: 2
   client:
+    fetchRegistry: true
+    registryFetchIntervalSeconds: 5
     serviceUrl:
       defaultZone: http://192.168.100.29:5002/eureka/
 
@@ -48,6 +53,9 @@ spring:
     properties.mail.smtp.starttls.enable: true
     smtp.debug: true
     batchSize: 10
+    subject: "MALI"
+    fixedDelay: 5000
+    initialDelay: 5000
 
 flyway:
   enabled: true 
