--- a/config-service/src/main/resources/config/alert-service.yml
+++ b/config-service/src/main/resources/config/alert-service.yml
@@ -49,13 +49,14 @@ spring:
     port: 587
     username: mucunga90
     password: Mucunga90()
-    properties.mail.smtp.auth: true
+    properties.mail.smtp.user: true
     properties.mail.smtp.starttls.enable: true
     smtp.debug: true
     batchSize: 10
     subject: "MALI"
     fixedDelay: 5000
     initialDelay: 5000
+    verificationLink: 192.168.100.29/user/verifyEmail
 
 flyway:
   enabled: true 
