--- a/config-service/src/main/resources/config/alert-service.yml
+++ b/config-service/src/main/resources/config/alert-service.yml
@@ -56,7 +56,7 @@ spring:
     subject: "MALI"
     fixedDelay: 5000
     initialDelay: 5000
-    verificationLink: 192.168.100.29/user/verifyEmail
+    verificationLink: 192.168.100.29/user/verify
 
 flyway:
   enabled: true 
