Removed Proxy service
This is now unnecessary, create now a token in the core service base controller for validation

--- a/config-service/src/main/resources/config/gateway-service.yml
+++ b/config-service/src/main/resources/config/gateway-service.yml
@@ -8,6 +8,7 @@ eureka:
     leaseRenewalIntervalInSeconds: 1
     lease-expiration-duration-in-seconds: 2
   client:
+    registerWithEureka: true
     fetchRegistry: true
     registryFetchIntervalSeconds: 5
     serviceUrl:
