--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -1,23 +1,3 @@
-debug: true
-
-server:
-  port: 5004
-
-eureka:
-  instance:
-    leaseRenewalIntervalInSeconds: 1
-    lease-expiration-duration-in-seconds: 2
-  client:
-    registerWithEureka: true
-    fetchRegistry: true
-    registryFetchIntervalSeconds: 5
-    serviceUrl:
-      defaultZone: http://192.168.100.29:5002/eureka/
-
-logging:
-  pattern: 
-    console: "%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n"
-              
 spring:
   cloud:
     gateway:
@@ -67,9 +47,9 @@ spring:
         - Path=/report/**
         filters:
         - RewritePath=/report/(?<path>.*), /$\{path}
-      - id: openapi
-        uri: http://192.168.100.29:${server.port}
-        predicates:
-        - Path=/v3/api-docs/**
-        filters:
-        - RewritePath=/v3/api-docs/(?<path>.*), /$\{path}/v3/api-docs
+
+logging.level.com.netflix: DEBUG
+
+management:
+  security:
+    enabled: false
