--- a/gateway-service/Dockerfile
+++ b/gateway-service/Dockerfile
@@ -4,5 +4,4 @@ ENV APP_HOME /app
 EXPOSE 5004
 COPY target/$APP_FILE $APP_HOME/
 WORKDIR $APP_HOME
-ENTRYPOINT ["sh", "-c"]
-CMD ["exec java -jar $APP_FILE"]
+ENTRYPOINT ["java","-jar","$APP_FILE"]
